feat: prefetch cards images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,61 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/A_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/A_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/A_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/A_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/2_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/2_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/2_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/2_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/3_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/3_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/3_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/3_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/4_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/4_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/4_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/4_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/5_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/5_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/5_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/5_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/6_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/6_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/6_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/6_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/7_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/7_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/7_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/7_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/8_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/8_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/8_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/8_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/9_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/9_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/9_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/9_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/10_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/10_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/10_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/10_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/J_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/J_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/J_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/J_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/Q_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/Q_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/Q_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/Q_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/K_C.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/K_D.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/K_H.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/K_S.png" />
+      <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/HIDDEN.png" />
+
       <title>Kamikaze</title>
    </head>
    <body>
