style: added favicon

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
       <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/K_S.png" />
       <link rel="prefetch" href="https://kamikaze-game.netlify.app/images/HIDDEN.png" />
 
+      <link rel="icon" href="https://kamikaze-game.netlify.app/images/A_H.png" type="image/png" />
+
       <title>Kamikaze</title>
    </head>
    <body>
